# lab-testing-lcensies

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: .null-ls_814785_database.py  account.py  bank.py  customer.py  database.py  main.py  transaction.py
tests/e2e/: test_bank.py
tests/unit/: test_account.py  test_customer.py  test_database.py  test_transaction.py
